--- a/poster.html
+++ b/poster.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>#SchoolRebellion Protest Poster</title>
-  <meta name="description" content="Fill in the fields and download your #SchoolRebellion poster.">
+  <title>#RébellionDesÉcoles téléchargez l’affiche</title>
+  <meta name="description" content="Remplissez les informations et téléchargez l’image.">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta http-equiv="content-type" content="text/html;charset=utf-8" />
   <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -20,26 +20,26 @@
 <body class="tool">
   <div class="layout">
     <div class="setup">
-      <a href="/" class="back">⬅ Back</a>
-      <h1>DOWNLOAD THE POSTER:</h1>
-      <p>This tool is in beta. Fill in the fields and download the image. If you end up with any issue, please reach us at <a href="mailto:eixample.respira@gmail.com">eixample.respira@gmail.com</a>.</p>
+      <a href="/" class="back">⬅ Précédent</a>
+      <h1>TÉLÉCHARGEZ L’AFFICHE :</h1>
+      <p>Cet outil est en phase de test. Remplissez les informations et téléchargez l’image. Si vous avez des difficultés, n’hésitez pas à nous contacter par mail : <a href="mailto:eixample.respira@gmail.com">eixample.respira@gmail.com</a>.</p>
       <div class="row">
-        <label>Subtitle:</label>
-        <input type="text" data-target=".poster .subtitle" placeholder="we will be blocking Main Street">
+        <label>Description de la mobilisation:</label>
+        <input type="text" data-target=".poster .subtitle" placeholder="On piétonnise la rue de l’Horloge">
       </div>
       <div class="row">
-        <label>Date:</label>
+        <label>Date :</label>
         <div class="shopify-select">
           <select data-target=".poster .date">
-            <option>Friday, February 26th</option>
-            <option>Friday, March 12th</option>
-            <option>Friday, March 26th</option>
+            <option>Vendredi 26 février</option>
+            <option>Vendredi 12 mars</option>
+            <option>Vendredi 26 mars</option>
           </select>
           <svg class="shopify-select-icon" viewBox="0 0 24 24"><path d="M21 5.176l-9.086 9.353L3 5.176.686 7.647 12 19.382 23.314 7.647 21 5.176z"></path></svg>
         </div>
       </div>
       <div class="row">
-        <label>Time:</label>
+        <label>Heure :</label>
         <div class="shopify-select">
           <select data-target=".poster .time">
             <option>12.00</option>
@@ -72,67 +72,68 @@
         </div>
       </div>
       <div class="row">
-        <label>Location:</label>
-        <input type="text" data-target=".poster .location" maxlength="38" placeholder="Main Street between 3rd and 4rth">
+        <label>Lieu :</label>
+        <input type="text" data-target=".poster .location" maxlength="38" placeholder="Rue de l’Horloge avec Théâtre">
       </div>
       <div class="row">
-        <label>Duration:</label>
+        <label>Durée :</label>
         <div class="shopify-select">
           <select data-target=".poster .duration">
             <option>30 minutes</option>
             <option>45 minutes</option>
-            <option>1 hour</option>
-            <option>2 hours</option>
-            <option>3 hours</option>
-            <option>4 hours</option>
+            <option>1 heure</option>
+            <option>1 heure et demie</option>
+            <option>2 heures</option>
+            <option>3 heures</option>
+            <option>4 heures</option>
           </select>
           <svg class="shopify-select-icon" viewBox="0 0 24 24"><path d="M21 5.176l-9.086 9.353L3 5.176.686 7.647 12 19.382 23.314 7.647 21 5.176z"></path></svg>
         </div>
       </div>
       <div class="row">
-        <label>Organization entities logo:</label>
+        <label>Logo des organisateurs :</label>
         <input type="file" accept="image/*" data-target=".summons-1" data-parent=".summons .images"/>
         <input type="file" accept="image/*" data-target=".summons-2" data-parent=".summons .images"/>
         <input type="file" accept="image/*" data-target=".summons-3" data-parent=".summons .images"/>
         <input type="file" accept="image/*" data-target=".summons-4" data-parent=".summons .images"/>
       </div>
       <div class="row">
-        <label>Support entities logo:</label>
+        <label>Logo des entités qui soutiennent :</label>
         <input type="file" accept="image/*" data-target=".support-1" data-parent=".support .images"/>
         <input type="file" accept="image/*" data-target=".support-2" data-parent=".support .images"/>
         <input type="file" accept="image/*" data-target=".support-3" data-parent=".support .images"/>
         <input type="file" accept="image/*" data-target=".support-4" data-parent=".support .images"/>
       </div>
       <div class="row">
-        <a class="download" href="" data-action="download">Download</a>
+        <a class="download" href="" data-action="download">Télécharger</a>
       </div>
     </div>
     <div class="right">
       <div class="container">
         <div class="poster">
-          <img class="background" src="/images/base-en.png">
-          <div class="text subtitle">we will be blocking Main Street</div>
+          <img class="background" src="/images/base-fr.png">
+          <div class="text subtitle">On piétonnise la rue de l’Horloge</div>
           <div class="text info">
-            <b><span class="date">Friday, February 26th</span></b><br>
+            <b><span class="date">Vendredi 26 février</span></b><br>
             <b><span class="time">16.30</span> h</b><br>
-            <span class="location">Main Street between 3rd and 4rth</span><br>
-            Duration: <span class="duration">30 minutes</span>
+            <span class="location">Rue de l’Horloge avec Théâtre</span><br>
+            Durée: <span class="duration">30 minutes</span>
           </div>
           <div class="logos">
             <div class="section summons">
-              <div class="text">Organiser:</div>
+              <div class="text"><span style="white-space: nowrap;">Organisateurs :</span></div>
               <div class="images">
                 <img src="/images/logo-afa.jpg" class="summons-1">
               </div>
             </div>
             <div class="section support">
-              <div class="text" style="display: none;">With support from::</div>
+              <div class="text" style="display: none;"><span style="white-space: nowrap;">Avec le soutien de :</span></div>
               <div class="images">
               </div>
             </div>
           </div>
           <div class="url">
-            <div class="text">More information at: <u>www.schoolrebellion.com</u></div>
+            <div class="text">Plus d’informations : <u>www.rebelliondesecoles.fr</u></div>
           </div>
         </div>
       </div>  
