--- a/index.html
+++ b/index.html
@@ -70,5 +70,15 @@
       </div>
     </div>
   </div>
+  <div class="talls">
+    <div class="inner">
+      <h2>51 coupures de trafic organisées pour le vendredi 26 février à 16h30</h2>
+      <p><b>Barcelona:</b> Auró, Miralletes, Broggi, Diputació, Sagrada Família, Fructuós Gelabert, Octavio Paz, Els Llorers, Joan Miró, Institut Ernest Lluch, 9 Graons, Antoni Balmanya, Dovella, Torrent de Can Carabassa, Concepció, Rius i Taulet, Josep Maria Jujol, Ítaca, Anglesola, Voramar, Bogatell, Encants, Escola de les Aigües, Gaia, Jesuïtes Casp, Casas, Farigola, Arenal de Llevant, Ferran Sunyer, Fort Pienc, Pere Vila, Institut Pau Claris, Escola 30 passos, Mallorca, Pere IV, Institut Quatre Cantons, Claret, Auditori, Santa Anna, EBM El Fil, Pràctiques, Jaume I, EBM El Timbal, Pia Balmes, Tabor, Catalònia, Fluvià, Font d'en Fargas, Escola Poblenou, Torrent d'en Melis, Estel Guinardó, Bressol Montserrat, Rambleta del Clot, Ferdinand de Lesseps</b>
+      <p><b>Sabadell:</b> Enric Casassas, Samuntada, Joanot Alisenda, Nostra Llar.</p>
+      <p><b>Badalona:</b> Ventós Mir, Progrés, Badalona Port.</p>
+      <p><b>Sant Cugat:</b> Joan Maragall, Collserola.</p>
+      </p>
+    </div>
+  </div>
 </body>
 </html>
