--- a/poster.html
+++ b/poster.html
@@ -21,11 +21,11 @@
   <div class="layout">
     <div class="setup">
       <a href="/" class="back">⬅ Précédent</a>
-      <h1>TÉLÉCHARGEZ L’AFFICHE :</h1>
+      <h1>TÉLÉCHARGEZ L’AFFICHE:</h1>
       <p>Cet outil est en phase de test. Remplissez les informations et téléchargez l’image. Si vous avez des difficultés, n’hésitez pas à nous contacter par mail : <a href="mailto:eixample.respira@gmail.com">eixample.respira@gmail.com</a>.</p>
       <div class="row">
         <label>Description de la mobilisation:</label>
-        <input type="text" data-target=".poster .subtitle" placeholder="On piétonnise la rue de l’Horloge">
+        <input type="text" data-target=".poster .subtitle" placeholder="Nous coupons la rue de l'Horloge">
       </div>
       <div class="row">
         <label>Date :</label>
@@ -42,31 +42,31 @@
         <label>Heure :</label>
         <div class="shopify-select">
           <select data-target=".poster .time">
-            <option>12.00</option>
-            <option>12.15</option>
-            <option>12.30</option>
-            <option>12.45</option>
-            <option>13.00</option>
-            <option>13.15</option>
-            <option>13.30</option>
-            <option>13.45</option>
-            <option>14.00</option>
-            <option>14.15</option>
-            <option>14.30</option>
-            <option>14.45</option>
-            <option>15.00</option>
-            <option>15.15</option>
-            <option>15.30</option>
-            <option>15.45</option>
-            <option>16.00</option>
-            <option>16.15</option>
-            <option selected>16.30</option>
-            <option>16.45</option>
-            <option>17.00</option>
-            <option>17.15</option>
-            <option>17.30</option>
-            <option>17.45</option>
-            <option>18.00</option>
+            <option>12h00</option>
+            <option>12h15</option>
+            <option>12h30</option>
+            <option>12h45</option>
+            <option>13h00</option>
+            <option>13h15</option>
+            <option>13h30</option>
+            <option>13h45</option>
+            <option>14h00</option>
+            <option>14h15</option>
+            <option>14h30</option>
+            <option>14h45</option>
+            <option>15h00</option>
+            <option>15h15</option>
+            <option>15h30</option>
+            <option>15h45</option>
+            <option>16h00</option>
+            <option>16h15</option>
+            <option selected>16h30</option>
+            <option>16h45</option>
+            <option>17h00</option>
+            <option>17h15</option>
+            <option>17h30</option>
+            <option>17h45</option>
+            <option>18h00</option>
           </select>
           <svg class="shopify-select-icon" viewBox="0 0 24 24"><path d="M21 5.176l-9.086 9.353L3 5.176.686 7.647 12 19.382 23.314 7.647 21 5.176z"></path></svg>
         </div>
@@ -111,11 +111,11 @@
     <div class="right">
       <div class="container">
         <div class="poster">
-          <img class="background" src="/images/base-fr.png">
-          <div class="text subtitle">On piétonnise la rue de l’Horloge</div>
+          <img class="background" src="/images/base-fr.png?v=1">
+          <div class="text subtitle">Nous coupons la rue de l'Horloge</div>
           <div class="text info">
             <b><span class="date">Vendredi 26 février</span></b><br>
-            <b><span class="time">16.30</span> h</b><br>
+            <b><span class="time">16h30</span> h</b><br>
             <span class="location">Rue de l’Horloge avec Théâtre</span><br>
             Durée: <span class="duration">30 minutes</span>
           </div>
